:revnumber: 0.3.0
:revdate: 2025-xx-xx
:revremark: -dev
:version-label: Unconfirmed
:copyright: Unlicense
:experimental:
:hide-uri-scheme:
:icons: font
:source-highlighter: highlight.js
:sectnums!:
:toc: left
:sectanchors:

Version: $Id$ ($Date$)

== History

:leveloffset: +2

= 0.3.0-dev (2025 Xxx xx)
:author: Philip Michael Raab
:email: <philip@cathedral.co.za>
:description: Some helpers for database task and query construction.
:keywords: inanepain, db, database, sql, query, builder, MySQL, PostgresSQL
:revnumber: 0.3.0
:revdate: 2025-XX-XX
:copyright: Unlicense
:experimental:
:hide-uri-scheme:
:icons: font
:source-highlighter: highlight.js
:sectnums!:
:toc: auto
:sectanchors:

* update: `AbstractEntity::save` added optional parameter *bool* `insert` for non-automatic primary id fields.
* update: `AbstractTable` fetch single entity by id returns result correctly.
* update: moved to new docs structure.
* update: `OptionsInterface` used throughout.

:leveloffset!:

:leveloffset: +2

= 0.2.0 (2025 Apr 25)
:author: Philip Michael Raab
:email: <philip@cathedral.co.za>
:description: Some helpers for database task and query construction.
:keywords: inanepain, db, database, sql, query, builder, MySQL, PostgresSQL
:revnumber: 0.2.0
:revdate: 2025-04-25
:copyright: Unlicense
:experimental:
:hide-uri-scheme:
:icons: font
:source-highlighter: highlight.js
:sectnums!:
:toc: auto
:sectanchors:

* new: DB-Layer for database access initial basic release

:leveloffset!:
:leveloffset: +2

= 0.1.0 (2022 Jul 22)
:author: Philip Michael Raab
:email: <philip@cathedral.co.za>
:description: Some helpers for database task and query construction.
:keywords: inanepain, db, database, sql, query, builder, MySQL, PostgresSQL
:revnumber: 0.1.0
:revdate: 2022-07-22
:copyright: Unlicense
:experimental:
:hide-uri-scheme:
:icons: font
:source-highlighter: highlight.js
:sectnums!:
:toc: auto
:sectanchors:

* initial release

:leveloffset!: