@@ -16,5 +16,7 @@
 
 * update: `AbstractEntity::save` added optional parameter *bool* `insert` for non-automatic primary id fields.
 * update: `AbstractTable` fetch single entity by id returns result correctly.
+* new: `AbstractTable::insertUpdate` uses `insert on conflict update syntax`.
+* new: `EntityPrepareMethod` method attribute indicates method to call pre db persistence.
 * update: moved to new docs structure.
 * update: `OptionsInterface` used throughout.
